# image-crop-retrieval

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
scripts/: build_index.py
src/image_retrieval/: config.py  cvat_client.py  embedder.py  indexer.py  registry.py  s3_client.py
src/image_retrieval/ui/: crop_selector.py  cvat_exporter.py  results_viewer.py
src/pages/: image_retrieval.py
tests/: conftest.py  test_build_index.py  test_config.py  test_cvat_client.py  test_embedder.py  test_indexer.py  test_registry.py  test_s3_client.py
