[project]
name = "image-crop-retrieval"
version = "0.1.0"
description = "Streamlit app for SSL-based image crop retrieval via FAISS"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.37",
    "streamlit-drawable-canvas>=0.9.3",
    "torch>=2.3",
    "torchvision>=0.18",
    "Pillow>=10.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "faiss-cpu>=1.8",
    "tqdm>=4.66",
    "boto3>=1.35",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "python-consul2>=0.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "types-Pillow>=10.0",
    "boto3-stubs[s3]>=1.35",
    "types-pyyaml>=6.0.12.20260518",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "moto[s3]>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_retrieval", "src/pages"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
# ANN401 — typing.Any is needed for untyped third-party libraries
#           (streamlit_drawable_canvas canvas result object)
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
# Scripts are standalone; allow print() and broad imports
"scripts/*.py" = ["T201"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
# Tell mypy where to find packages: src/ layout
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# These packages ship no py.typed marker or stubs
module = [
    "faiss",
    "streamlit_drawable_canvas",
    "torchvision",
    "torchvision.*",
    "tqdm",
    "tqdm.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "moto",
    "moto.*",
    "respx",
    "consul",
    "consul.*",
    "cveta",
    "cveta.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
